--- a/css/styles.css
+++ b/css/styles.css
@@ -179,6 +179,80 @@ html,body{
 /* Breakpoints for Small Devices */
 @media (max-width:767px){
 
+    #menu{
+      
+        background-color:white;
+        display: flex;
+        flex-direction: column;
+        
+    }
+
+    .item-1,.item-2,.item-3{
+        margin-bottom: 15px;
+        border: 2px solid black;
+    }
+
+
+    #header{
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    
+    .title-1{
+        border: 2px solid black;
+        background-color:pink;
+        text-align:center;
+        width:150px;
+        position: relative;
+        float:right;
+        flex-grow: 1;
+       
+     
+       
+        
+    }
+    .title-2{
+        border: 2px solid black;
+        background-color:red;
+        color:white;
+        text-align:center;  
+        width:150px;
+        position: relative;
+        float:right;
+      
+     
+    }
+ 
+    .title-3{
+        border: 2px solid black;
+        background-color:#FBE7C6;
+        text-align: center;
+        width:150px;
+        position: relative;
+        float:right;
+        
+        
+    
+    }
+    .item-4 p.contenido{
+        margin-top:20px;
+        clear: both;
+        display: none;
+        visibility: hidden;
+    }
+    .title-4{
+        border: 1px solid black;
+        background-color:#FBE7C6;
+        text-align: center;
+        width:150px;
+        position: relative;
+        float:right;
+        display: none;
+        visibility: hidden;
+
+       
+    }
+
 
 
 
